--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "build-storybook",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "prepare": "build-storybook",
     "size": "size-limit",
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "regenerator-runtime": "*",
+    "require-from-string": "^2.0.2",
+    "webpack": ">=2.0.0"
   },
   "husky": {
     "hooks": {
@@ -51,11 +54,16 @@
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@size-limit/preset-small-lib": "^7.0.8",
+    "@storybook/addon-actions": "^6.5.8",
     "@storybook/addon-essentials": "^6.5.8",
     "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-interactions": "^6.5.8",
     "@storybook/addon-links": "^6.5.8",
     "@storybook/addons": "^6.5.8",
+    "@storybook/builder-webpack4": "^6.5.8",
+    "@storybook/manager-webpack4": "^6.5.8",
     "@storybook/react": "^6.5.8",
+    "@storybook/testing-library": "^0.0.11",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
@@ -67,5 +75,10 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "regenerator-runtime": "*",
+    "require-from-string": "^2.0.2",
+    "webpack": ">=2.0.0"
   }
 }
