--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,37 @@
 name: CI
-on:
-  push:
-    branches:
-    - storybook-portfolio
-    paths: ["stories/**"]
-
+on: [push]
 jobs:
-  build-and-deploy:
-    run-on: ubuntu-latest
+  build:
+    name: Build and Deploy to Github Pages
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: ['16.14.0']
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
-    - name: Build Storybook
-      run: |
-        npm install
-        npm run build
-    - name: Build and deploy to storybook-static branch
-      uses: JamesIves/github-pages-deploy-action@4.3.3
-      with:
-        # ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: storybook-static
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Use Node ${{ matrix.node }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Install deps and build (with cache)
+        uses: bahmutov/npm-install@v1
+
+      # - name: Lint
+      #   run: yarn lint
+      
+      # - name: Test
+      #   run: yarn test
+
+      - name: Build
+        run: yarn build
+
+      - name: Build and deploy to storybook-static branch
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        with:
+          # ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: storybook-static
