feat: update about me page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "start": "tsdx watch",
+    "dev": "start-storybook -p 6006",
     "build": "build-storybook",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
@@ -54,16 +55,16 @@
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@size-limit/preset-small-lib": "^7.0.8",
-    "@storybook/addon-actions": "^6.5.8",
-    "@storybook/addon-essentials": "^6.5.8",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-interactions": "^6.5.8",
-    "@storybook/addon-links": "^6.5.8",
-    "@storybook/addons": "^6.5.8",
-    "@storybook/builder-webpack4": "^6.5.8",
-    "@storybook/manager-webpack4": "^6.5.8",
-    "@storybook/react": "^6.5.8",
-    "@storybook/testing-library": "^0.0.11",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/addons": "^6.5.9",
+    "@storybook/builder-webpack4": "^6.5.9",
+    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
@@ -72,6 +73,7 @@
     "react-dom": "^18.1.0",
     "react-is": "^18.1.0",
     "size-limit": "^7.0.8",
+    "storybook-dark-mode": "^1.1.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
